--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Ahmad</h1>
-<img src="01.jpeg" alt="">
+<img src="01.jpeg" alt="" style="width: 150px;height: 100px;border-radius: 15px;border-color: blueviolet;>
