--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
+<body>
 <h1>Ahmad</h1>
-<img src="01.jpeg" alt="" style="width: 150px;height: 100px;border-radius: 15px;border-color: blueviolet;>
+<img src="01.jpeg" alt="" style="width: 150px;height: 100px;border-radius: 15px;border-color: blueviolet;">
+</body>
