--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <body>
-<h1>Ahmad</h1>
-<img src="01.jpeg" alt="" style="width: 150px;height: 100px;border-radius: 15px;border-color: blueviolet;">
+<table>
+    <tr>
+        <th><h1>Soubhi El-Ostoura</h1></th>
+        <th><h1>شارد في حب الله</h1></th>
+    </tr>
+    <tr>
+        <td style="width: 50%;height: auto;"><img src="01.jpeg" alt="" style="width: 50%;height: 70%;border-radius: 15px;border-color: 5px blueviolet;"></td>
+        <td><img src="02.jpg" alt="" style="width: 50%;height: 100%;border-radius: 15px;border-color: 5px blueviolet;"></td>
+    </tr>
+</table>
 </body>
