--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <th><h1>شارد في حب الله</h1></th>
     </tr>
     <tr>
-        <td style="width: 50%;height: auto;"><img src="01.jpeg" alt="" style="width: 50%;height: 70%;border-radius: 15px;border-color: 5px blueviolet;"></td>
-        <td><img src="02.jpg" alt="" style="width: 50%;height: 100%;border-radius: 15px;border-color: 5px blueviolet;"></td>
+        <td style="width: 50%;"><img src="01.jpeg" alt="" style="width: 50%;height: 70%;border-radius: 15px;border-color: 5px blueviolet;"></td>
+        <td><img src="02.jpg" alt="" style="width: 50%;height: 70%;border-radius: 15px;border-color: 5px blueviolet;"></td>
     </tr>
 </table>
 </body>
